--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "my-app",
+  "name": "virtualitour-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ajorquera.github.io/virtualitour-react/",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
