--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
+    "firebase": "^9.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.9",
+    "styled-components": "^5.3.11",
+    "swr": "^2.1.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -32,6 +35,7 @@
     "test": "react-scripts test",
     "test:ci": "react-scripts test --ci --watchAll=false --coverage && yarn lint && yarn build",
     "lint": "eslint --ext js,ts,tsx src",
+    "lint:fix": "eslint --fix --ext js,ts,tsx src",
     "eject": "react-scripts eject"
   },
   "jest": {
