--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://ajorquera.github.io/virtualitour-react/",
   "dependencies": {
+    "@floating-ui/react": "^0.25.1",
     "@fontsource/roboto": "^4.5.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +16,7 @@
     "@types/styled-components": "^5.1.26",
     "@types/styled-system": "^5.1.16",
     "firebase": "^9.22.1",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.2",
