--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "@types/styled-system": "^5.1.16",
+    "@types/styled-system__core": "^5.1.3",
     "firebase": "^9.22.1",
     "polished": "^4.2.2",
     "react": "^18.2.0",
