--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "virtualitour-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ajorquera.github.io/virtualitour-react/",
+  "homepage": "https://ajorquera.github.io/virtualitour-react/app/",
+  "main": "build/components/cjs/index.js",
+  "module": "build/components/esm/index.js",
+  "types": "build/components/types/index.d.ts",
   "dependencies": {
     "@floating-ui/react": "^0.25.1",
     "@fontsource/roboto": "^4.5.8",
+    "@rollup/plugin-image": "^3.0.2",
+    "@rollup/plugin-typescript": "^11.1.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,6 +28,11 @@
     "react-hook-form": "^7.44.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "rollup": "^3.29.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-dts": "^6.0.2",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "styled-components": "^5.3.11",
     "styled-system": "^5.1.5",
     "styled-tools": "^1.7.2",
@@ -32,14 +42,16 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build:app": "BUILD_PATH='./build/app' react-scripts build",
+    "build:components": "rollup -c --bundleConfigAsCjs",
+    "build:storybook": "storybook build -o build/storybook",
+    "build": "yarn build:app && yarn build:components && yarn build:storybook",
     "test": "react-scripts test",
     "test:ci": "react-scripts test --ci --watchAll=false --coverage && yarn lint && yarn build",
     "lint": "eslint --ext js,ts,tsx src",
     "lint:fix": "eslint --fix --ext js,ts,tsx src",
     "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook": "storybook dev -p 6006"
   },
   "jest": {
     "coverageThreshold": {
